interpreter/tests/golden-files/lists-indexing.golden.enzo
//= LIST STUFF & INDEX ERRORS ─────────────────────────────────────────────
[]
error: list index out of range
	$emptyListTest.1;  // error: list index out of range
//= BIND EMPTY AND THEN FILL WITH LIST ────────────────────────────────────
error: $empty-list already defined
	$empty-list: 50;    //error: $empty-list already defined
["now not empty"]
//= DECLARE LIST AND ACCESS ITEMS ────────────────────────────────────────
"blue"
"green"
//= NESTED LISTS WITH INDEXING ────────────────────────────────────────────
3
//= MIXED LIST‐INSIDE‐LIST ● INDEX VS ATTR ──────────────────────────────
"b"
//= LIST OF LISTS + INDEX OF LIST ────────────────────────────────────
[[$x: 5], [$x: 7]]
7
//= Out-of-bounds and weird list indices
[1, 2, 3]
error: list index out of range
	$list.0;            // error: list index out of range
error: list index out of range
	$list.4;            // error: list index out of range
error: list index out of range
	$list.-1;           // error: list index out of range
error: can't use text as index
	$list."foo";        // error: can't use text as index or keyname
error: list index out of range
	$list.1.1;          // error: list index out of range
//= List mutation
[1, 2]
[5, 2]
error: list index out of range
	$mutable.3 <: 9;        // error: list index out of range
//= Trailing commas
[1, 2, 3]
error: double comma in list
	$badList1-index: [1,,2];                        // error: remove one comma
error: excess leading comma
	$badList2-index: [,1,2];                        // error: leading comma
error: empty list with just a comma
	$badList3-index: [,];                           // error: just comma
//= Various type errors
"oops"
error: index applies to lists
	$notalist.1;                              // index applies to lists
